maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: type mismatch;
 found   : Unit
 required: Int
      sommeVirage = keepHandOnSideWall(sommeVirage)
                                      ^Escaper:29: error: not enough arguments for method keepHandOnSideWall: (som: Int)Unit.
Unspecified value parameter som.
    keepHandOnSideWall()
                      ^Escaper:51: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return somme
  ^